[package]
name = "rust_scf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.15.0"
# nalgebra = "0.31.1"
ndarray = "0.15.6"
# rayon = "1.5.3"
clap = { version = "3.2.16", features = ["derive"] }
ndarray-linalg = {version = "0.14.1", features = ["openblas-system"]}
